--- a/gb/21/9/27/n13262834.md
+++ b/gb/21/9/27/n13262834.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zhhqsq3413/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zhhqsq3413/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zhhqsq3413/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>南湾台湾同乡会 周信结接棒</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/09/id13262955-IMG_1422-600x400.jpg" />
 <h6>9月25日，北加州南湾台湾同乡会举办2021年会，周信结接棒第52届会长，众多贵宾到场祝贺。（曹景哲／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2021年09月27日讯】（大纪元记者曹景哲苗必达报导）南湾台湾同乡会2021年会，于上周六（9月25日）在南湾侨教中心举办，有上百名乡亲参加。年会上还进行了会长交接典礼，<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E5%91%A8%E4%BF%A1%E7%BB%93.md#1">周信结</a>接棒第52届会长。侨务委员会委员长<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E7%AB%A5%E6%8C%AF%E6%BA%90.md#1">童振源</a>以视讯的方式、立法委员<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E5%BA%84%E7%91%9E%E9%9B%84.md#1">庄瑞雄</a>则通过视频向湾区乡亲致意，库柏蒂诺市议员魏虹、菲利蒙市议员黄洁宜、前圣荷西市议员哈米斯（Johnny Khamis）也到场祝贺。</p>
-<p>侨务委员会委员长<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E7%AB%A5%E6%8C%AF%E6%BA%90.md#1">童振源</a>以视讯的方式，向在场各位乡亲致意，“美国疫情依旧严峻，希望海外<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E4%BE%A8%E8%83%9E.md#1">侨胞</a>平安、健康。”童振源说，今年年初，中国大陆禁止台湾凤梨进口后，侨胞热烈采购，弥补缺口；当台湾发生“太鲁阁号”列车事故后，侨胞有钱出钱、有力出力，帮助台湾渡过难关。近几年台美关系持续友好，侨胞也是功不可没。</p>
+	<p>【大纪元2021年09月27日讯】（大纪元记者曹景哲苗必达报导）南湾台湾同乡会2021年会，于上周六（9月25日）在南湾侨教中心举办，有上百名乡亲参加。年会上还进行了会长交接典礼，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%91%A8%E4%BF%A1%E7%BB%93.md#1">周信结</a>接棒第52届会长。侨务委员会委员长<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%AB%A5%E6%8C%AF%E6%BA%90.md#1">童振源</a>以视讯的方式、立法委员<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%BA%84%E7%91%9E%E9%9B%84.md#1">庄瑞雄</a>则通过视频向湾区乡亲致意，库柏蒂诺市议员魏虹、菲利蒙市议员黄洁宜、前圣荷西市议员哈米斯（Johnny Khamis）也到场祝贺。</p>
+<p>侨务委员会委员长<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%AB%A5%E6%8C%AF%E6%BA%90.md#1">童振源</a>以视讯的方式，向在场各位乡亲致意，“美国疫情依旧严峻，希望海外<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BE%A8%E8%83%9E.md#1">侨胞</a>平安、健康。”童振源说，今年年初，中国大陆禁止台湾凤梨进口后，侨胞热烈采购，弥补缺口；当台湾发生“太鲁阁号”列车事故后，侨胞有钱出钱、有力出力，帮助台湾渡过难关。近几年台美关系持续友好，侨胞也是功不可没。</p>
 <p>童振源表示，台湾在防疫、民主自由、经济发展和竞争力方面，在全球名列前茅。他举例，去年台湾经济成长率为3.11%，排名全球第1，主计总处预估，今年经济成长率可望超过6%。最后，童振源说，南湾（硅谷）是高科技重镇，政府在5年前，已成立“亚洲．硅谷”计划办公室，他期盼未来可以再加强台湾、硅谷高科技产业的交流。</p>
-<figure id="attachment_13262954" aria-describedby="caption-attachment-13262954" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/09/id13262954-IMG_1332-600x400.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/09/id13262954-IMG_1332-600x400.jpg" alt="" width="600" b="400" class="size-medium_vertical wp-image-13262954" /></a><figcaption id="caption-attachment-13262954" class="wp-caption-text">9月25日，<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E5%8C%97%E5%8A%A0%E5%B7%9E%E5%8D%97%E6%B9%BE%E5%8F%B0%E6%B9%BE%E5%90%8C%E4%B9%A1%E4%BC%9A.md#1">北加州南湾台湾同乡会</a>举办2021年会，有上百名乡亲参加。（曹景哲／大纪元）</figcaption></figure>
-<p>立法委员<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E5%BA%84%E7%91%9E%E9%9B%84.md#1">庄瑞雄</a>通过视频，向<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E5%8C%97%E5%8A%A0%E5%B7%9E%E5%8D%97%E6%B9%BE%E5%8F%B0%E6%B9%BE%E5%90%8C%E4%B9%A1%E4%BC%9A.md#1">北加州南湾台湾同乡会</a>的朋友问好。他列举蔡英文政府因应疫情采取的政策，例如口罩国家队，让全民都能获得口罩，台湾因此成为防疫模范生。然而近几个月，台湾疫情急升温，庄瑞雄表示，台北市和新北市成为重灾区，全台也从一级升至二级、三级警戒，所幸目前疫情已经趋缓。</p>
-<p>对于两岸关系，庄瑞雄说，其它国家是送台湾疫苗，但中共只会用武力恐吓台湾，并派遣军机，持续侵入台湾防空识别区。此外，对岸日前以验出害虫为由，禁止进口台湾产的莲雾、释迦，庄瑞雄认为：“这是‘政治介壳虫’！也就是政治上的打压。”最后，庄瑞雄表示，待疫情趋缓，他将赴加州，和<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E4%BE%A8%E8%83%9E.md#1">侨胞</a>相见欢。</p>
+<figure id="attachment_13262954" aria-describedby="caption-attachment-13262954" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/09/id13262954-IMG_1332-600x400.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/09/id13262954-IMG_1332-600x400.jpg" alt="" width="600" b="400" class="size-medium_vertical wp-image-13262954" /></a><figcaption id="caption-attachment-13262954" class="wp-caption-text">9月25日，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8C%97%E5%8A%A0%E5%B7%9E%E5%8D%97%E6%B9%BE%E5%8F%B0%E6%B9%BE%E5%90%8C%E4%B9%A1%E4%BC%9A.md#1">北加州南湾台湾同乡会</a>举办2021年会，有上百名乡亲参加。（曹景哲／大纪元）</figcaption></figure>
+<p>立法委员<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%BA%84%E7%91%9E%E9%9B%84.md#1">庄瑞雄</a>通过视频，向<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8C%97%E5%8A%A0%E5%B7%9E%E5%8D%97%E6%B9%BE%E5%8F%B0%E6%B9%BE%E5%90%8C%E4%B9%A1%E4%BC%9A.md#1">北加州南湾台湾同乡会</a>的朋友问好。他列举蔡英文政府因应疫情采取的政策，例如口罩国家队，让全民都能获得口罩，台湾因此成为防疫模范生。然而近几个月，台湾疫情急升温，庄瑞雄表示，台北市和新北市成为重灾区，全台也从一级升至二级、三级警戒，所幸目前疫情已经趋缓。</p>
+<p>对于两岸关系，庄瑞雄说，其它国家是送台湾疫苗，但中共只会用武力恐吓台湾，并派遣军机，持续侵入台湾防空识别区。此外，对岸日前以验出害虫为由，禁止进口台湾产的莲雾、释迦，庄瑞雄认为：“这是‘政治介壳虫’！也就是政治上的打压。”最后，庄瑞雄表示，待疫情趋缓，他将赴加州，和<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BE%A8%E8%83%9E.md#1">侨胞</a>相见欢。</p>
 <p>经文处处长赖铭琪表示，加州从6月15日解封之后，侨胞活动渐渐变多，他每个星期都要参加几个活动，充分感受到湾区侨胞的活力与热情。他也向即将卸任的詹葳莲会长表示敬意与谢意，她一上任就展开台湾加入联合国的连署活动，之后又举办了许多活动，像爱心募款、元宵节线上活动等等。</p>
-<figure id="attachment_13262956" aria-describedby="caption-attachment-13262956" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/09/id13262956-IMG_1432-600x400.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/09/id13262956-IMG_1432-600x400.jpg" alt="" width="600" b="400" class="size-medium_vertical wp-image-13262956" /></a><figcaption id="caption-attachment-13262956" class="wp-caption-text">9月25日，北加州南湾台湾同乡会举办2021年会，<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E5%91%A8%E4%BF%A1%E7%BB%93.md#1">周信结</a>（右）从詹葳莲（左）手中接棒第52届会长，经文处处长赖铭琪（中）监交。（曹景哲／大纪元）</figcaption></figure>
+<figure id="attachment_13262956" aria-describedby="caption-attachment-13262956" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/09/id13262956-IMG_1432-600x400.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/09/id13262956-IMG_1432-600x400.jpg" alt="" width="600" b="400" class="size-medium_vertical wp-image-13262956" /></a><figcaption id="caption-attachment-13262956" class="wp-caption-text">9月25日，北加州南湾台湾同乡会举办2021年会，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%91%A8%E4%BF%A1%E7%BB%93.md#1">周信结</a>（右）从詹葳莲（左）手中接棒第52届会长，经文处处长赖铭琪（中）监交。（曹景哲／大纪元）</figcaption></figure>
 <p>赖铭琪也恭喜周信结将接棒南湾台湾同乡会会长，他刚刚才卸任湾区台湾商会会长。在过去一年里，周会长与经文处合作，做了十多次的捐赠口罩活动，非常努力地做国民外交工作。他希望与周会长继续密切合作，与各位乡亲一起为台湾的外交打拼。</p>
 <p>侨教中心主任阎树荣、副主任徐广梅、侨务委员李汉文等贵宾也出席。年会上还有多种娱乐节目，包括：欢乐呼拉圈比赛、歌曲表演、大师说笑话、健身舞蹈，在摸彩活动之后，以卡拉OK收尾。◇</p>
 <p><ahref="https://sf.epochtimes.com/donate/"><img class="aligncenter size-large wp-image-12584681" src="https://i.epochtimes.com/assets/uploads/2020/11/donate-SF-600x179px-C-600x179.jpg" alt="" width="600" b="179" /></a><br />
@@ -26,35 +26,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/21/5/3/n12920375.md#1">南湾各社团声援台湾参加世卫大会</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/21/8/9/n13148959.md#1">湾区侨社感谢驻外单位对台胞的照顾</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/21/9/11/n13225701.md#1">南湾侨界社团 力挺台湾加入联合国</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/21/9/24/n13256979.md#1">南湾台湾同乡会25日举办年会 预计两百余人同庆</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/5/3/n12920375.md#1">南湾各社团声援台湾参加世卫大会</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/8/9/n13148959.md#1">湾区侨社感谢驻外单位对台胞的照顾</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/9/11/n13225701.md#1">南湾侨界社团 力挺台湾加入联合国</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/9/24/n13256979.md#1">南湾台湾同乡会25日举办年会 预计两百余人同庆</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/25/n11000755.md#1" target="_blank">文革处决纪录：非战争下的中国之最</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/15/n4663033.md#1" target="_blank">食道癌晚期的绝症患者获救</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/27/n10252063.md#1" target="_blank">袁斌：用鲜血染红的“恶之花”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/10/21/n4555059.md#1" target="_blank">94岁老人：没有法轮功我早就不在人世了</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/20/n11959031.md#1">传习近平亲自下令严办任志强 红二代分裂</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/19/n11955384.md#1">北京昆明湖罕见涨潮 传上次涨潮后毛泽东去世</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/13/n11938981.md#1">“千金报德”英雄本色</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690054.md#1">【车评】迷你快车 2022 MINI Cooper S</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677259.md#1">5种抗炎又给人饱腹感的零食</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zhhqsq3413/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zhhqsq3413/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/27/n13262834.htm">南湾台湾同乡会 周信结接棒</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/27/n13262834.htm">南湾台湾同乡会 周信结接棒</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zhhqsq3413/djy/blob/master/gb/21/9/27/n13262834.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zhhqsq3413/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zhhqsq3413/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/21/9/27/n13262834.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
